--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Menggunakan Path Ikon yang Tepat -->
     <link rel="icon" type="image/png" href="/assets/learner.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="google-site-verification" content="Us3MtkIV2AGWs8vY_QfuAqIyxNtiiubQ1DYjJqaJESo" />
     <!-- Optimisasi SEO -->
     <title>Ngerental - Solusi Terbaik untuk Sewa Mobil Anda</title>
     <meta name="description" content="Ngerental menyediakan layanan rental mobil terbaik dengan berbagai pilihan kendaraan berkualitas untuk kebutuhan perjalanan Anda. Mudah, cepat, dan terpercaya!" />
