--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <meta name="twitter:title" content="Ngerental - Solusi Terbaik untuk Sewa Mobil Anda" />
     <meta name="twitter:description" content="Ngerental menyediakan layanan rental mobil terbaik dengan berbagai pilihan kendaraan berkualitas untuk kebutuhan perjalanan Anda." />
     <meta name="twitter:image" content="/assets/banner.jpg" />
-    
+    <meta name="google-site-verification" content="Us3MtkIV2AGWs8vY_QfuAqIyxNtiiubQ1DYjJqaJESo" />
 
     <!-- Schema.org Structured Data -->
     <script type="application/ld+json">
